<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Imaginary</string>
    <string name="action_settings">Settings</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_create">Imaginary</string>
    <string name="title_activity_join">Imaginary</string>
    <string name="enter_message_hint">Enter message</string>
    <string name="action_quit">Quit</string>
    <string name="btnCollaborative">Collaborative game</string>
    <string name="btnCompetitive">Competitive game</string>
    <string name="txtCollaborativeDesc">Everybody creates a collaborative drawing</string>
    <string name="txtCompetitiveDesc">Everyone creates his/her own drawing</string>
    <string name="create_options">Please choose the type of game: </string>

    <string name="lobby">The game is waiting for players</string>
    <string name="lobby_color">Please, select a color:</string>
    <string name="lobby_player">Players:</string>
    <string name="lobby_exit">Exit</string>
    <string name="join_Ready">Click here once you are ready</string>
    <string name="join_NotReady">Wait!, I want to change my color</string>
    <string name="lobby_Start">Start Game</string>
    <string name="join">You have joined the game</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtGuessTitle">It\'s your turn to guess!</string>
    <string name="stroke">stroke size</string>
    <string name="pattern_picture">test_pattern</string>
    <string name="arrow_descriptor">Go to drawing screen</string>
    <string name="quit">Closing game</string>
    <string name="really_quit">Are you sure you want to close this game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continueBtn">Continue</string>
    <string name="gameOver">The game is over</string>
    <string name="gameOverDesc">Do you want to play again?</string>
    <string name="exit">Exit</string>
    <string name="playAgain">Play again</string>
    <string name="used_pictures">UsedPictures</string>
    <string name="continueAlert">Before moving to the next round</string>
    <string name="continueAlertDesc">Did you show the pictures to the other players?</string>
    <string name="timeUp">Time is up! Please, show the picture to the others</string>
    <string name="timeUpTitle">Time is up!</string>
    <string name="startGameTitle">Preparing...</string>
    <string name="colorTake">has taken this color</string>
    <string name="player_left">has left the game</string>
    <string name="startGameDesc">The game will start in </string>
    <string name="seconds"> seconds</string>
    <string name="timeRemaining">Time remaining: </string>

</resources>
