<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#2654c2a0"
    android:orientation="vertical"
    tools:context=".MainActivity.DrawingFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/start_new"
            android:src="@drawable/ic_new"/>

        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/brush"
            android:src="@drawable/ic_brush"/>

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/erase"
            android:src="@drawable/ic_eraser"/>

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/save"
            android:src="@drawable/ic_save"/>

    </LinearLayout>

    <drawing.training.javi.drawingapp.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF"
    />



</LinearLayout>
